fix some things